--- a/packages/buefy/scss/components/checkbox.scss
+++ b/packages/buefy/scss/components/checkbox.scss
@@ -1,5 +1,4 @@
 @use "sass:list";
-
 @use "../../../bulma/sass/utilities" as bulma-utilities;
 @use "../../../bulma/sass/form/shared" as bulma-form;
 @use "../utilities/functions";
@@ -14,7 +13,6 @@ $checkbox-border-width: 2px !default;
 $checkbox-checkmark-color: var(--primary-invert) !default;
 $checkbox-size: 1.25em !default;
 $checkbox-padding: var(--control-padding-horizontal) !default;
-
 $checkbox-colors: bulma-form.$form-colors !default;
 
 // Map Local variables
@@ -38,72 +36,85 @@ $-css-vars-map: (
 .b-checkbox {
     &.checkbox {
         @extend %unselectable;
+
         display: inline-flex;
         align-items: center;
         outline: none;
+
         &:not(.button) {
             margin-right: 0.5em;
+
             & + .checkbox:last-child {
                 margin-right: 0;
             }
         }
-        input[type=checkbox] {
+
+        input[type="checkbox"] {
             position: absolute;
-            z-index: -1;
             left: 0;
-            opacity: 0;
+            z-index: -1;
             outline: none;
+            opacity: 0;
+
             + .check {
+                flex-shrink: 0;
                 width: var(--checkbox-size);
                 height: var(--checkbox-size);
-                flex-shrink: 0;
+                background: var(--checkbox-background-color);
                 border: var(--checkbox-border-width) solid var(--checkbox-border-color);
                 border-radius: var(--checkbox-border-radius);
-                background: var(--checkbox-background-color);
                 transition: background calc(var(--speed) * 2) var(--easing);
             }
+
             &:checked,
             &:indeterminate {
                 & +.check {
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    border-color: var(--checkbox-active-background-color);
-                    background: var(--checkbox-active-background-color); // url(functions.checkmark($checkbox-checkmark-color)) no-repeat center center;
-                    color: var(--checkbox-checkmark-color);
                     font-weight: var(--weight-bold);
+                    color: var(--checkbox-checkmark-color);
                     text-align: center;
+                    background: var(--checkbox-active-background-color); // url(functions.checkmark($checkbox-checkmark-color)) no-repeat center center;
+                    border-color: var(--checkbox-active-background-color);
+
                     @each $name, $pair in $checkbox-colors {
                         $color: list.nth($pair, 1);
                         $color-invert: list.nth($pair, 2);
                         &.is-#{$name} {
-                            border-color: var(--#{$name});
-                            background: var(--#{$name}); // url(functions.checkmark($color-invert)) no-repeat center center;
                             color: var(--#{$name}-invert);
+                            background: var(--#{$name}); // url(functions.checkmark($color-invert)) no-repeat center center;
+                            border-color: var(--#{$name});
                         }
                     }
+
                     &::before {
                         position: absolute;
                         font-family: system-ui;
                     }
                 }
             }
+
             &:checked + .check {
                 &::before {
                     content: "✓";
                 }
             }
+
             &:indeterminate + .check {
                 &::before {
                     content: "─";
                 }
             }
+
             &:focus {
                 + .check {
                     box-shadow: 0 0 0.5em var(--grey-light);
                 }
+
                 &:checked + .check {
                     box-shadow: 0 0 0.5em var(--checkbox-focus-box-shadow-color);
+
                     @each $name, $pair in $checkbox-colors {
                         $color: list.nth($pair, 1);
                         &.is-#{$name} {
@@ -113,18 +124,23 @@ $-css-vars-map: (
                 }
             }
         }
+
         .control-label {
             padding-left: var(--checkbox-padding);
         }
+
         &.button {
             display: flex;
         }
+
         &[disabled] {
             opacity: 0.5;
         }
+
         &:hover {
-            input[type=checkbox]:not(:disabled) + .check {
+            input[type="checkbox"]:not(:disabled) + .check {
                 border-color: var(--checkbox-active-background-color);
+
                 @each $name, $pair in $checkbox-colors {
                     $color: list.nth($pair, 1);
                     &.is-#{$name} {
@@ -133,6 +149,7 @@ $-css-vars-map: (
                 }
             }
         }
+
         @include bulma-utilities.control-sizes;
     }
 }
