--- a/packages/buefy/scss/components/colorpicker.scss
+++ b/packages/buefy/scss/components/colorpicker.scss
@@ -19,11 +19,12 @@ $-css-vars-map: (
         font-family: var(--family-monospace);
         text-transform: uppercase;
     }
+
     .colorpicker-footer {
         padding-top: .875rem;
+        margin-top: .875rem;
         border: 1px solid var(--grey-lighter);
         border-width: 1px 0 0;
-        margin-top: .875rem;
 
         .colorpicker-fields {
             margin-bottom: .875rem;
@@ -34,31 +35,35 @@ $-css-vars-map: (
                 .field-label {
                     margin-right: .5rem;
                 }
+
                 .control {
                     display: flex;
+
                     .input {
+                        flex-grow: 1;
                         width: 0;
                         min-width: 42px;
-                        flex-grow: 1;
-                        -webkit-appearance: none;
-                        -moz-appearance: textfield;
-                        appearance: textfield;
                         text-align: right;
+                        appearance: none;
+                        appearance: textfield;
+                        appearance: textfield;
 
                         &::-webkit-outer-spin-button,
                         &::-webkit-inner-spin-button {
                             margin: 0;
-                            -webkit-appearance: none;
+                            appearance: none;
                         }
                     }
                 }
             }
         }
     }
+
     .dropdown.is-expanded .dropdown-menu,
     .dropdown.is-expanded.is-mobile-modal .dropdown-menu {
         width: unset;
     }
+
     .dropdown-horizontal-colorpicker {
         display: flex;
         flex-direction: row;
@@ -66,9 +71,9 @@ $-css-vars-map: (
         .colorpicker-footer {
             padding-top: 0;
             padding-left: .875rem;
-            border-width: 0 0 0 1px;
             margin-top: 0;
             margin-left: .875rem;
+            border-width: 0 0 0 1px;
         }
     }
 }
@@ -76,6 +81,7 @@ $-css-vars-map: (
 svg.b-colorpicker-triangle {
     width: 200px;
     height: 200px;
+
     @extend %unselectable;
 
     @include bulma-utilities.mobile {
@@ -88,13 +94,13 @@ svg.b-colorpicker-triangle {
         height: 100%;
         background:
             conic-gradient(
-                #f00,
-                #ff0,
-                #0f0,
-                #0ff,
-                #00f,
-                #f0f,
-                #f00
+                #ff0000,
+                #ffff00,
+                #00ff00,
+                #00ffff,
+                #0000ff,
+                #ff00ff,
+                #ff0000
             );
     }
 
@@ -113,25 +119,28 @@ svg.b-colorpicker-triangle {
     .sl-range-thumb {
         width: calc(100% / 1 - .25em / 1);
         height: calc(100% / 1 - .25em / 1);
-        border-radius: var(--colorpicker-radius);
         margin: .125em;
-        background: transparent;
-        box-shadow:
-            inset 0 0 0 1px #fff,
-            0 0 0 1px var(--grey-lighter);
         cursor: grab;
+        background: transparent;
+        border-radius: var(--colorpicker-radius);
+        box-shadow:
+            inset 0 0 0 1px #ffffff,
+            0 0 0 1px var(--grey-lighter);
 
         &:hover {
             box-shadow:
-                inset 0 0 0 1px #fff,
+                inset 0 0 0 1px #ffffff,
                 0 0 0 1px var(--grey-light);
         }
+
         &:focus {
             box-shadow:
-                inset 0 0 0 1px #fff,
+                inset 0 0 0 1px #ffffff,
                 0 0 0 1px var(--colorpicker-hue-selected-stroke);
+
             // 0 0 0 .125em rgba($colorpicker-hue-selected-stroke, .25);
         }
+
         &:active {
             cursor: grabbing;
         }
@@ -141,70 +150,66 @@ svg.b-colorpicker-triangle {
 div.b-colorpicker-square {
     position: relative;
     aspect-ratio: 1/1;
+
     @extend %unselectable;
 
     .colorpicker-square-slider-hue {
         position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        border-radius: var(--colorpicker-radius);
+        inset: 0;
         background:
             conic-gradient(
-                #f00,
-                #ff0,
-                #0f0,
-                #0ff,
-                #00f,
-                #f0f,
-                #f00
+                #ff0000,
+                #ffff00,
+                #00ff00,
+                #00ffff,
+                #0000ff,
+                #ff00ff,
+                #ff0000
             );
+        border-radius: var(--colorpicker-radius);
 
         .hue-range-thumb {
             position: absolute;
-            border-radius: calc(var(--colorpicker-radius) / 1.75);
             aspect-ratio: 1 / 1;
-            box-shadow:
-                inset 0 0 0 1px #fff,
-                0 0 0 1px var(--grey-lighter);
             cursor: grab;
+            border-radius: calc(var(--colorpicker-radius) / 1.75);
+            box-shadow:
+                inset 0 0 0 1px #ffffff,
+                0 0 0 1px var(--grey-lighter);
             transform: translate(-50%, -50%);
 
             &:hover {
                 box-shadow:
-                    inset 0 0 0 1px #fff,
+                    inset 0 0 0 1px #ffffff,
                     inset 0 0 0 2px var(--grey-light),
                     0 0 0 1px var(--grey-light);
             }
+
             &:focus {
                 box-shadow:
-                    inset 0 0 0 1px #fff,
+                    inset 0 0 0 1px #ffffff,
                     0 0 0 1px var(--colorpicker-hue-selected-stroke);
+
                 // 0 0 0 .125em rgba($colorpicker-hue-selected-stroke, .25);
             }
+
             &:active {
                 cursor: grabbing;
             }
         }
     }
+
     .colorpicker-square-slider-sl {
         position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+        inset: 0;
+        background: #ffffff;
         border-radius: calc(var(--colorpicker-radius) / 2);
-        background: #fff;
 
         &::before {
             position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background: linear-gradient(0deg, #000, #fff);
+            inset: 0;
             content: "";
+            background: linear-gradient(0deg, #000000, #ffffff);
             mix-blend-mode: hard-light;
         }
 
@@ -213,25 +218,28 @@ div.b-colorpicker-square {
             display: block;
             width: 8px;
             height: 8px;
+            cursor: grab;
             border-radius: var(--colorpicker-radius);
             box-shadow:
-                inset 0 0 0 1px #fff,
+                inset 0 0 0 1px #ffffff,
                 0 0 0 1px var(--grey-lighter);
-            cursor: grab;
             transform: translate(-50%, -50%);
 
             &:hover {
                 box-shadow:
-                    inset 0 0 0 1px #fff,
+                    inset 0 0 0 1px #ffffff,
                     inset 0 0 0 2px var(--grey-light),
                     0 0 0 1px var(--grey-light);
             }
+
             &:focus {
                 box-shadow:
-                    inset 0 0 0 1px #fff,
+                    inset 0 0 0 1px #ffffff,
                     0 0 0 1px var(--colorpicker-hue-selected-stroke);
+
                 // 0 0 0 .125em rgba($colorpicker-hue-selected-stroke, .25);
             }
+
             &:active {
                 cursor: grabbing;
             }
@@ -242,7 +250,6 @@ div.b-colorpicker-square {
 .b-colorpicker-alpha-slider {
     position: relative;
     height: 1em;
-    border-radius: var(--colorpicker-radius);
     margin-top: .125em;
     margin-bottom: .875rem;
     background-image:
@@ -250,6 +257,7 @@ div.b-colorpicker-square {
         linear-gradient(45deg, #c7c7c7 25%, transparent 25%, transparent 75%, #c7c7c7 75%, #c7c7c7);
     background-position: .5em .5em, 0 0;
     background-size: 1em 1em;
+    border-radius: var(--colorpicker-radius);
 
     .alpha-range-thumb {
         position: absolute;
@@ -257,26 +265,29 @@ div.b-colorpicker-square {
         left: 0;
         width: .4em;
         height: 1.25em;
+        cursor: grab;
         border-radius: var(--colorpicker-radius);
         box-shadow:
-            inset 0 0 0 1px #fff,
+            inset 0 0 0 1px #ffffff,
             inset 0 0 0 2px var(--grey-lighter),
             0 0 0 1px var(--grey-lighter);
-        cursor: grab;
         transform: translate(-50%, -50%);
 
         &:hover {
             box-shadow:
-                inset 0 0 0 1px #fff,
+                inset 0 0 0 1px #ffffff,
                 inset 0 0 0 2px var(--grey-light),
                 0 0 0 1px var(--grey-light);
         }
+
         &:focus {
             box-shadow:
-                inset 0 0 0 1px #fff,
+                inset 0 0 0 1px #ffffff,
                 0 0 0 1px var(--colorpicker-hue-selected-stroke);
+
             // 0 0 0 .125em rgba($colorpicker-hue-selected-stroke, .25);
         }
+
         &:active {
             cursor: grabbing;
         }
@@ -285,10 +296,7 @@ div.b-colorpicker-square {
             &,
             &> .tooltip-trigger {
                 position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
+                inset: 0;
                 display: block;
             }
         }
