--- a/packages/buefy/scss/components/datepicker.scss
+++ b/packages/buefy/scss/components/datepicker.scss
@@ -1,6 +1,5 @@
 @use "sass:list";
 @use "sass:math";
-
 @use "../../../bulma/sass/utilities" as bulma-utilities;
 @use "../../../bulma/sass/utilities/derived-variables" as bulma-vars;
 @use "../../../bulma/sass/form/shared" as bulma-form;
@@ -16,7 +15,6 @@ $datepicker-item-hover-color: var(--scheme-invert) !default;
 $datepicker-item-hover-background-color: var(--background) !default;
 $datepicker-item-selected-color: var(--primary-invert) !default;
 $datepicker-item-selected-background-color: var(--primary) !default;
-
 $datepicker-colors: bulma-form.$form-colors !default;
 
 // Map Local variables
@@ -40,12 +38,15 @@ $-css-vars-map: (
 
 .datepicker {
     font-size: 0.875rem;
+
     .dropdown,
     .dropdown-trigger {
         width: 100%;
+
         .input[readonly] {
-            box-shadow: var(--input-shadow);
             cursor: pointer;
+            box-shadow: var(--input-shadow);
+
             &:focus,
             &.is-focused,
             &:active,
@@ -54,142 +55,173 @@ $-css-vars-map: (
             }
         }
     }
+
     // unset opacity when dropdow is disabled
     .dropdown {
         &.is-disabled {
             opacity: 1;
         }
     }
+
     .dropdown-content {
-        border-radius: var(--datepicker-radius);
         background-color: var(--datepicker-background-color);
+        border-radius: var(--datepicker-radius);
         box-shadow: var(--datepicker-shadow);
     }
+
     .dropdown-item {
         font-size: inherit;
     }
+
     .datepicker-header {
         padding-bottom: 0.875rem;
-        border-bottom: 1px solid var(--grey-lighter);
         margin-bottom: 0.875rem;
+        border-bottom: 1px solid var(--grey-lighter);
     }
+
     .datepicker-footer {
         padding-top: 0.875rem;
-        border-top: 1px solid var(--grey-lighter);
         margin-top: 0.875rem;
+        border-top: 1px solid var(--grey-lighter);
     }
+
     .datepicker-table {
         display: table;
         margin: 0 auto;
+
         .datepicker-cell {
             display: table-cell;
             padding: 0.5rem 0.75rem;
-            border-radius: var(--radius);
             text-align: center;
             vertical-align: middle;
+            border-radius: var(--radius);
         }
+
         .datepicker-header {
             display: table-header-group;
+
             .datepicker-cell {
-                color: var(--datepicker-header-color);
                 font-weight: var(--weight-semibold);
+                color: var(--datepicker-header-color);
             }
         }
+
         .datepicker-body {
             display: table-row-group;
+
             .datepicker-row {
                 display: table-row;
             }
+
             .datepicker-months {
                 display: inline-flex;
+                flex-flow: row wrap;
                 width: 17rem;
-                flex-direction: row;
-                flex-wrap: wrap;
+
                 .datepicker-cell {
                     display: flex;
-                    width: math.div(100, 3) * 1%;
-                    height: 2.5rem;
                     align-items: center;
                     justify-content: center;
+                    width: math.div(100, 3) * 1%;
+                    height: 2.5rem;
                 }
             }
+
             .datepicker-cell {
                 &.is-unselectable {
                     color: var(--datepicker-item-disabled-color);
                 }
+
                 &.is-today {
                     --datepicker-today-border-color: #{bulma-utilities.bulmaVarOpacity(primary, 0.5)};
+
                     border: var(--datepicker-today-border) var(--datepicker-today-border-color);
                 }
+
                 &.is-selectable {
                     color: var(--datepicker-item-color);
+
                     &:hover:not(.is-selected),
                     &:focus:not(.is-selected) {
-                        background-color: var(--datepicker-item-hover-background-color);
                         color: var(--datepicker-item-hover-color);
                         cursor: pointer;
+                        background-color: var(--datepicker-item-hover-background-color);
                     }
+
                     &.is-within-hovered-range {
                         &.is-first-hovered {
+                            color: var(--grey-lighter);
                             background-color: var(--grey);
-                            border-bottom-right-radius: 0;
                             border-top-right-radius: 0;
-                            color: var(--grey-lighter);
+                            border-bottom-right-radius: 0;
                         }
+
                         &.is-within-hovered {
-                            border-radius: 0;
-                            background-color: var(--datepicker-item-hover-background-color);
                             color: var(--datepicker-item-hover-color);
+                            background-color: var(--datepicker-item-hover-background-color);
+                            border-radius: 0;
                         }
+
                         &.is-last-hovered {
-                            background-color: var(--grey);
-                            border-bottom-left-radius: 0;
-                            border-top-left-radius: 0;
                             color: var(--grey-lighter);
+                            background-color: var(--grey);
+                            border-top-left-radius: 0;
+                            border-bottom-left-radius: 0;
                         }
                     }
                 }
+
                 &.is-selected {
-                    background-color: var(--datepicker-item-selected-background-color);
                     color: var(--datepicker-item-selected-color);
+                    background-color: var(--datepicker-item-selected-background-color);
+
                     &.is-first-selected {
-                        background-color: var(--datepicker-item-selected-background-color);
-                        border-bottom-right-radius: 0;
-                        border-top-right-radius: 0;
                         color: var(--datepicker-item-selected-color);
+                        background-color: var(--datepicker-item-selected-background-color);
+                        border-top-right-radius: 0;
+                        border-bottom-right-radius: 0;
                     }
+
                     &.is-within-selected {
                         --datepicker-item-selected-background-color: #{bulma-utilities.bulmaVarOpacity(primary, 0.5)};
+
+                        background-color: var(--datepicker-item-selected-background-color);
                         border-radius: 0;
-                        background-color: var(--datepicker-item-selected-background-color);
                     }
+
                     &.is-last-selected {
-                        background-color: var(--datepicker-item-selected-background-color);
-                        border-bottom-left-radius: 0;
-                        border-top-left-radius: 0;
                         color: var(--datepicker-item-selected-color);
+                        background-color: var(--datepicker-item-selected-background-color);
+                        border-top-left-radius: 0;
+                        border-bottom-left-radius: 0;
                     }
                 }
+
                 &.is-nearby:not(.is-selected) {
                     color: var(--grey-light);
                 }
+
                 &.is-week-number {
                     cursor: default;
                 }
             }
+
             &.has-events {
                 .datepicker-cell {
                     padding: 0.3rem 0.75rem 0.75rem;
+
                     &.has-event {
                         position: relative;
+
                         .events {
                             position: absolute;
                             bottom: .425rem;
                             left: 0;
                             display: flex;
-                            width: 100%;
                             justify-content: center;
+                            width: 100%;
                             padding: 0 .35rem;
+
                             .event {
                                 @each $name, $pair in $datepicker-colors {
                                     $color: list.nth($pair, 1);
@@ -199,24 +231,29 @@ $-css-vars-map: (
                                 }
                             }
                         }
+
                         &.dots .event {
                             width: .35em;
                             height: .35em;
-                            border-radius: 50%;
                             margin: 0 .1em;
+                            border-radius: 50%;
                         }
+
                         &.bars .event {
                             width: 100%;
                             height: .25em;
                         }
                     }
+
                     &.is-selected {
                         overflow: hidden;
+
                         .events .event {
                             // Currently datepicker only uses primary coloring
                             // Ensure indicator is visible when selected
                             &.is-primary {
                                 --datepicker-background-color-selected: #{bulma-utilities.bulmaVarLighten(primary, 15%)};
+
                                 background-color: var(--datepicker-background-color-selected);
                             }
                         }
@@ -225,17 +262,21 @@ $-css-vars-map: (
             }
         }
     }
+
     @include bulma-utilities.control-sizes;
+
     @include bulma-utilities.desktop {
         .footer-horizontal-timepicker {
             display: flex;
             padding-left: 10px;
-            border: none;
             margin-left: 5px;
+            border: none;
         }
+
         .dropdown-horizontal-timepicker {
             display: flex;
         }
+
         .content-horizontal-timepicker {
             border-right: 1px solid #dbdbdb;
         }
