--- a/packages/buefy/scss/components/dropdown.scss
+++ b/packages/buefy/scss/components/dropdown.scss
@@ -19,43 +19,52 @@ $-css-vars-map: (
     & + .dropdown {
         margin-left: 0.5em;
     }
+
     .background {
         @extend %overlay;
+
         position: fixed;
         z-index: 40;
-        background-color: var(--dropdown-background-color);
         cursor: pointer;
+        background-color: var(--dropdown-background-color);
 
         @include bulma-utilities.from($dropdown-mobile-breakpoint) {
             display: none;
         }
     }
+
     &.dropdown-menu-animation {
         .dropdown-menu {
             display: block;
         }
     }
+
     .dropdown-menu {
         .dropdown-item {
             &.is-disabled {
                 cursor: not-allowed;
+
                 &:hover {
-                    background: inherit;
                     color: inherit;
+                    background: inherit;
                 }
             }
         }
+
         .has-link a {
             @extend .dropdown-item;
+
             padding-right: 3rem;
             white-space: nowrap;
         }
     }
+
     &.is-hoverable:not(.is-active) {
         .dropdown-menu {
             display: none;
         }
     }
+
     &.is-hoverable {
         &:hover {
             .dropdown-menu {
@@ -63,20 +72,25 @@ $-css-vars-map: (
             }
         }
     }
+
     &.is-expanded {
         width: 100%;
+
         .dropdown-trigger {
             width: 100%;
         }
+
         .dropdown-menu {
             width: 100%;
         }
+
         &.is-mobile-modal {
             .dropdown-menu {
                 max-width: 100%;
             }
         }
     }
+
     &:not(.is-disabled) {
         .dropdown-menu {
             .dropdown-item {
@@ -86,16 +100,20 @@ $-css-vars-map: (
             }
         }
     }
+
     .navbar-item {
         height: 100%;
     }
+
     &.is-disabled {
         cursor: not-allowed;
         opacity: var(--dropdown-disabled-opacity);
+
         .dropdown-trigger {
             pointer-events: none;
         }
     }
+
     &.is-inline {
         .dropdown-menu {
             position: static;
@@ -103,20 +121,20 @@ $-css-vars-map: (
             padding: 0;
         }
     }
+
     &.is-top-right {
         .dropdown-menu {
             top: auto;
             bottom: 100%;
         }
     }
+
     &.is-top-left {
         .dropdown-menu {
-            top: auto;
-            right: 0;
-            bottom: 100%;
-            left: auto;
+            inset: auto 0 100% auto;
         }
     }
+
     &.is-bottom-left {
         .dropdown-menu {
             right: 0;
@@ -128,17 +146,15 @@ $-css-vars-map: (
         &.is-mobile-modal {
             > .dropdown-menu {
                 position: fixed !important;
+                inset: 25% auto auto 50% !important;
                 z-index: 50 !important;
-                top: 25% !important;
-                right: auto !important;
-                bottom: auto !important;
-                left: 50% !important;
                 width: calc(100vw - 40px);
                 max-width: 460px;
                 max-height: calc(100vh - 120px);
                 overflow-y: auto;
-                transform: translate3d(-50%, -25%, 0);
                 white-space: normal;
+                transform: translate3d(-50%, -25%, 0);
+
                 > .dropdown-content {
                     > .dropdown-item, > .has-link a {
                         padding: 1rem 1.5rem;
