--- a/packages/buefy/scss/components/notices.scss
+++ b/packages/buefy/scss/components/notices.scss
@@ -1,22 +1,18 @@
 @use "sass:list";
-
 @use "../../../bulma/sass/utilities" as bulma-utilities;
 @use "../../../bulma/sass/elements/notification" as bulma-notification;
 
 $notices-shadow-color: rgba(var(--scheme-invert-rgb), 0.12) !default;
 $notices-shadow-color-bis: rgba(var(--scheme-invert-rgb), 0.04) !default;
 $notices-box-shadow: 0 1px 4px $notices-shadow-color, 0 0 6px $notices-shadow-color-bis !default;
-
 $toast-border-radius: 2em !default;
 $toast-opacity: 0.92 !default;
 $toast-box-shadow: $notices-box-shadow !default;
-
 $snackbar-background-color: var(--dark) !default; // dark is registered as var hence has hsl map
 $snackbar-color: var(--dark-invert) !default;
 $snackbar-border-radius: var(--radius) !default;
 $snackbar-button-text-transform: uppercase !default;
 $snackbar-box-shadow: $notices-box-shadow !default;
-
 $snackbar-colors: bulma-notification.$notification-colors !default;
 
 // Map Local variables
@@ -38,67 +34,74 @@ $-css-vars-map: (
 
 .notices {
     position: fixed;
+    inset: 0;
     z-index: 1000;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     display: flex;
-    overflow: hidden;
     padding: 2em;
+    overflow: hidden;
     pointer-events: none;
+
     .toast {
         display: inline-flex;
         padding: 0.75em 1.5em;
-        border-radius: var(--toast-border-radius);
         margin: 0.5em 0;
-        animation-duration: calc(var(--speed) * 2);
+        text-align: center;
+        pointer-events: auto;
+        border-radius: var(--toast-border-radius);
         box-shadow: var(--toast-box-shadow);
         opacity: var(--toast-opacity);
-        pointer-events: auto;
-        text-align: center;
+        animation-duration: calc(var(--speed) * 2);
+
         @each $name, $pair in $snackbar-colors {
             $color: list.nth($pair, 1);
             $color-invert: list.nth($pair, 2);
             &.is-#{$name} {
-                background: var(--#{$name});
                 color: var(--#{$name}-invert);
+                background: var(--#{$name});
             }
         }
     }
+
     .snackbar {
         --snackbar-button-background-color: #{bulma-utilities.bulmaVarDarken(dark, 5%)};
+
         display: inline-flex;
-        min-height: 3em;
         align-items: center;
         justify-content: space-around;
-        border-radius: var(--snackbar-border-radius);
+        min-height: 3em;
         margin: 0.5em 0;
-        animation-duration: calc(var(--speed) * 2);
-        background: var(--snackbar-background-color);
-        box-shadow: var(--snackbar-box-shadow);
         color: var(--snackbar-color);
         pointer-events: auto;
+        background: var(--snackbar-background-color);
+        border-radius: var(--snackbar-border-radius);
+        box-shadow: var(--snackbar-box-shadow);
+        animation-duration: calc(var(--speed) * 2);
+
         .text {
             padding: 0.5em 1em;
         }
+
         .action {
             padding: 0.5em;
             padding-left: 0;
             margin-left: auto;
+
             .button {
-                border: transparent;
-                background: var(--snackbar-background-color);
                 font-weight: var(--weight-semibold);
                 text-transform: var(--snackbar-button-text-transform);
+                background: var(--snackbar-background-color);
+                border: transparent;
             }
+
             .button:hover {
                 // TODO: revisit
                 background: var(--snackbar-button-background-color);
             }
+
             .button:active {
                 background: var(--snackbar-button-background-color);
             }
+
             @each $name, $pair in $snackbar-colors {
                 $color: list.nth($pair, 1);
                 &.is-#{$name} {
@@ -108,20 +111,24 @@ $-css-vars-map: (
                 }
             }
         }
+
         .action.is-cancel {
             padding-right: 0;
         }
+
         @include bulma-utilities.mobile {
             width: 100%;
-            border-radius: 0;
             margin: 0;
+            border-radius: 0;
         }
+
         @include bulma-utilities.tablet {
-            overflow: hidden;
             min-width: 350px;
             max-width: 600px;
+            overflow: hidden;
         }
     }
+
     .notification {
         max-width: 600px;
         pointer-events: auto;
@@ -134,12 +141,15 @@ $-css-vars-map: (
         &.is-top, &.is-bottom {
             align-self: center;
         }
+
         &.is-top-right, &.is-bottom-right {
             align-self: flex-end;
         }
+
         &.is-top-left, &.is-bottom-left {
             align-self: flex-start;
         }
+
         &.is-toast {
             opacity: var(--toast-opacity);
         }
@@ -149,6 +159,7 @@ $-css-vars-map: (
     &.is-top {
         flex-direction: column;
     }
+
     &.is-bottom {
         flex-direction: column-reverse;
 
@@ -156,11 +167,13 @@ $-css-vars-map: (
         // :not(:last-child) to :not(:first-child)
         .notification {
             margin-bottom: 0;
+
             &:not(:first-child) {
                 margin-bottom: 1.5rem;
             }
         }
     }
+
     &.has-custom-container {
         position: absolute;
     }
