--- a/packages/buefy/scss/components/numberinput.scss
+++ b/packages/buefy/scss/components/numberinput.scss
@@ -1,12 +1,14 @@
 .b-numberinput {
     &.field {
         margin-bottom: 0;
+
         &.is-grouped {
             div.control {
                 flex-grow: 1;
                 flex-shrink: 1;
             }
         }
+
         &.has-addons {
             &.is-expanded {
                 flex-grow: 1;
@@ -14,16 +16,20 @@
             }
         }
     }
-    input[type=number]::-webkit-inner-spin-button,
-    input[type=number]::-webkit-outer-spin-button {
+
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
         appearance: none;
     }
-    input[type=number] {
+
+    input[type="number"] {
         appearance: textfield;
     }
-    input[type=number] {
+
+    input[type="number"] {
         text-align: center;
     }
+
     .button {
         &.is-rounded {
             padding-right: 1em;
