--- a/packages/buefy/scss/components/steps.scss
+++ b/packages/buefy/scss/components/steps.scss
@@ -1,5 +1,4 @@
 @use "sass:list";
-
 @use "../../../bulma/sass/utilities" as bulma-utilities;
 @use "../../../bulma/sass/utilities/derived-variables" as bulma-vars;
 @use "../../../bulma/sass/form/shared" as bulma-form;
@@ -18,14 +17,13 @@ $steps-items-focused-outline: none !default;
 $steps-details-background-color: var(--body-background-color) !default;
 $steps-maker-default-color: var(--grey-light) !default;
 $steps-maker-color: var(--scheme-main) !default;
-$steps-marker-default-border: .2em solid #fff !default;
+$steps-marker-default-border: .2em solid #ffffff !default;
 $steps-default-color: var(--grey-lighter) !default;
 $steps-previous-color: var(--primary) !default;
 $steps-active-color: var(--primary) !default;
 $steps-divider-height: .2em !default;
 $steps-vertical-padding: 1em 0 !default;
 $steps-mobile-max-width: bulma-vars.$tablet !default;
-
 $steps-colors: bulma-form.$form-colors !default;
 
 // Map Local variables
@@ -53,8 +51,8 @@ $-css-vars-map: (
 @mixin steps-size {
     .steps {
         min-height: calc(var(--steps-size) * 2);
-        background-color: var(--steps-background-color);
         font-size: var(--steps-size);
+        background-color: var(--steps-background-color);
 
         .step-items {
             // height: var(--steps-height);
@@ -88,6 +86,7 @@ $-css-vars-map: (
                         height: var(--steps-divider-height);
                     }
                 }
+
                 &:only-child {
                     &::after {
                         top: var(--steps-size);
@@ -105,6 +104,7 @@ $-css-vars-map: (
 
     &.is-vertical {
         --steps-divider-indent-height: calc(var(--steps-size) - (var(--steps-divider-height) * 0.5));
+
         > .steps {
             &.has-label-right {
                 .step-items {
@@ -117,6 +117,7 @@ $-css-vars-map: (
                     }
                 }
             }
+
             &.has-label-left {
                 .step-items {
                     .step-item {
@@ -144,6 +145,7 @@ $-css-vars-map: (
                         }
                     }
                 }
+
                 &.has-label-left {
                     .step-items {
                         .step-item {
@@ -169,8 +171,8 @@ $-css-vars-map: (
 
             .step-item {
                 position: relative;
-                flex-basis: 1em;
                 flex-grow: 1;
+                flex-basis: 1em;
                 margin-top: 0;
 
                 .step-link {
@@ -188,14 +190,14 @@ $-css-vars-map: (
                 .step-marker {
                     z-index: 1;
                     display: flex;
-                    overflow: hidden;
                     align-items: center;
                     justify-content: center;
+                    overflow: hidden;
+                    font-weight: var(--weight-bold);
+                    color: var(--steps-maker-color);
+                    background: var(--steps-maker-default-color);
                     border: var(--steps-marker-default-border);
                     border-radius: var(--radius);
-                    background: var(--steps-maker-default-color);
-                    color: var(--steps-maker-color);
-                    font-weight: var(--weight-bold);
                 }
 
                 // Override marker color per step
@@ -209,21 +211,23 @@ $-css-vars-map: (
                             background-position: right bottom;
                             background-size: 200% 100%;
                         }
+
                         &.is-active {
                             .step-marker {
-                                border-color: var(--#{$name});
-                                background-color: var(--steps-maker-color);
                                 color: var(--#{$name});
+                                background-color: var(--steps-maker-color);
+                                border-color: var(--#{$name});
                             }
 
                             &::before, &::after {
                                 background-position: left bottom;
                             }
                         }
+
                         &.is-previous {
                             .step-marker {
-                                background-color: var(--#{$name});
                                 color: var(--#{$name}-invert);
+                                background-color: var(--#{$name});
                             }
 
                             &::before, &::after {
@@ -251,23 +255,28 @@ $-css-vars-map: (
                         left: -50%;
                         display: block;
                         width: 100%;
+
                         // This will contain the divider
                         content: " ";
                     }
                 }
+
                 &:only-child {
                     &::after {
                         position: absolute;
                         bottom: 0;
                         display: block;
                         height: var(--steps-divider-height);
+
                         // This will contain the divider
                         content: " ";
                     }
+
                     &::before, &::after {
                         left: 50%;
                         width: 25%;
                     }
+
                     &::before {
                         right: 50%;
                         left: auto;
@@ -286,19 +295,20 @@ $-css-vars-map: (
                     }
 
                     .step-marker {
-                        border-color: var(--steps-active-color);
-                        background-color: var(--steps-maker-color);
                         color: var(--steps-active-color);
+                        background-color: var(--steps-maker-color);
+                        border-color: var(--steps-active-color);
                     }
 
                     &::before, &::after {
                         background-position: left bottom;
                     }
                 }
+
                 &.is-previous {
                     .step-marker {
-                        background-color: var(--steps-previous-color);
                         color: var(--steps-maker-color);
+                        background-color: var(--steps-previous-color);
                     }
 
                     &::before, &::after {
@@ -311,17 +321,19 @@ $-css-vars-map: (
         + .step-content {
             position: relative;
             display: flex;
-            overflow: visible;
             flex-direction: column;
             padding: 1rem;
+            overflow: visible;
+
             .step-item {
-                flex-basis: auto;
                 flex-shrink: 0;
+                flex-basis: auto;
 
                 &:focus {
                     outline: var(--steps-items-focused-outline);
                 }
             }
+
             &.is-transitioning {
                 overflow: hidden;
             }
@@ -359,6 +371,7 @@ $-css-vars-map: (
                 }
             }
         }
+
         &.has-label-left {
             .step-items {
                 .step-item {
@@ -375,20 +388,19 @@ $-css-vars-map: (
 
     &.is-vertical {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-flow: row wrap;
 
         > .steps {
             .step-items {
-                height: 100%;
                 flex-direction: column;
+                height: 100%;
                 border-bottom-color: transparent;
 
                 .step-item {
                     display: flex;
-                    width: 100%;
                     align-items: center;
                     justify-content: center;
+                    width: 100%;
                     padding: var(--steps-vertical-padding);
 
                     &::before, &::after {
@@ -429,11 +441,13 @@ $-css-vars-map: (
                         &::before {
                             top: 50%;
                         }
+
                         &::after {
                             top: auto;
                             bottom: 50%;
                             width: var(--steps-divider-height);
                         }
+
                         &::before, &::after {
                             height: 25%;
                         }
@@ -448,6 +462,7 @@ $-css-vars-map: (
                     }
                 }
             }
+
             &.has-label-left {
                 .step-items {
                     .step-item {
@@ -455,6 +470,7 @@ $-css-vars-map: (
                     }
                 }
             }
+
             &:not(.has-label-right, .has-label-left) {
                 .step-items {
                     .step-item {
@@ -480,6 +496,7 @@ $-css-vars-map: (
             flex-direction: row-reverse;
         }
     }
+
     &:not(.is-vertical) {
         .steps {
             @include bulma-utilities.until($steps-mobile-max-width) {
@@ -489,6 +506,7 @@ $-css-vars-map: (
                             &:not(.is-active) {
                                 display: none;
                             }
+
                             &::before, &::after, &:not(:first-child)::before {
                                 position: absolute;
                                 bottom: 0;
@@ -496,9 +514,11 @@ $-css-vars-map: (
                                 display: block;
                                 width: 25%;
                                 height: var(--steps-divider-height);
+
                                 // This will contain the divider
                                 content: " ";
                             }
+
                             &::before, &:not(:first-child)::before {
                                 right: 50%;
                                 left: auto;
@@ -506,6 +526,7 @@ $-css-vars-map: (
                         }
                     }
                 }
+
                 &.mobile-compact {
                     .step-items {
                         .step-item {
