--- a/packages/buefy/scss/components/tabs.scss
+++ b/packages/buefy/scss/components/tabs.scss
@@ -38,11 +38,13 @@ $-css-vars-map: (
     .tabs {
         flex-shrink: 0;
         margin-bottom: 0;
+
         li {
             a:focus {
                 border-bottom-color: var(--tabs-link-focus-active-border-bottom-color);
                 outline: var(--tabs-focused-outline);
             }
+
             &:not(.is-active) {
                 a:focus {
                     border-bottom-color: var(--tabs-link-focus-border-bottom-color);
@@ -50,9 +52,9 @@ $-css-vars-map: (
             }
 
             &.is-disabled {
+                pointer-events: none;
                 cursor: not-allowed;
                 opacity: 0.5;
-                pointer-events: none;
             }
         }
 
@@ -60,60 +62,69 @@ $-css-vars-map: (
         &.is-boxed {
             li {
                 a:focus {
-                    border-bottom-color: var(--tabs-boxed-link-focus-active-border-bottom-color);
                     background-color: var(--tabs-boxed-link-focus-active-background-color);
+                    border-bottom-color: var(--tabs-boxed-link-focus-active-border-bottom-color);
                 }
+
                 &:not(.is-active) {
                     a:focus {
-                        border-bottom-color: var(--tabs-boxed-link-focus-border-bottom-color);
                         background-color: var(--tabs-boxed-link-focus-background-color);
+                        border-bottom-color: var(--tabs-boxed-link-focus-border-bottom-color);
                     }
                 }
             }
         }
+
         &.is-toggle {
             li {
                 a:focus {
-                    border-color: var(--tabs-toggle-link-focus-active-border-color);
                     background-color: var(--tabs-toggle-link-focus-active-background-color);
+                    border-color: var(--tabs-toggle-link-focus-active-border-color);
                 }
+
                 &:not(.is-active) {
                     a:focus {
-                        border-color: var(--tabs-toggle-link-focus-border-color);
                         background-color: var(--tabs-toggle-link-focus-background-color);
+                        border-color: var(--tabs-toggle-link-focus-border-color);
                     }
                 }
             }
         }
     }
+
     .tab-content {
         position: relative;
         display: flex;
-        overflow: visible;
         flex-direction: column;
         padding: 1rem;
+        overflow: visible;
+
         .tab-item {
-            flex-basis: auto;
             flex-shrink: 0;
+            flex-basis: auto;
 
             &:focus {
                 outline: var(--tabs-items-focused-outline);
             }
         }
+
         &.is-transitioning {
             overflow: hidden;
         }
     }
+
     &:not(:last-child) {
         margin-bottom: 1.5rem;
     }
+
     &.is-fullwidth {
         width: 100%;
     }
+
     &.is-vertical {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-flow: row wrap;
+
         > .tabs {
             ul {
                 flex-direction: column;
@@ -131,9 +142,9 @@ $-css-vars-map: (
             &.is-boxed {
                 li {
                     a {
-                        border-radius: var(--tabs-boxed-link-radius) 0 0 var(--tabs-boxed-link-radius);
                         border-right-color: var(--tabs-border-bottom-color) !important;
                         border-bottom-color: transparent !important;
+                        border-radius: var(--tabs-boxed-link-radius) 0 0 var(--tabs-boxed-link-radius);
                     }
 
                     &.is-active {
@@ -144,16 +155,19 @@ $-css-vars-map: (
                     }
                 }
             }
+
             &.is-toggle {
                 li {
                     + li {
                         margin-left: 0;
                     }
+
                     &:first-child {
                         a {
                             border-radius: var(--tabs-toggle-link-radius) var(--tabs-toggle-link-radius) 0 0;
                         }
                     }
+
                     &:last-child {
                         a {
                             border-radius: 0 0 var(--tabs-toggle-link-radius) var(--tabs-toggle-link-radius);
@@ -161,6 +175,7 @@ $-css-vars-map: (
                     }
                 }
             }
+
             &.is-fullwidth {
                 li {
                     a {
@@ -169,6 +184,7 @@ $-css-vars-map: (
                 }
             }
         }
+
         > .tab-content {
             flex-grow: 1;
         }
@@ -191,10 +207,10 @@ $-css-vars-map: (
                 &.is-boxed {
                     li {
                         a {
-                            border-radius: 0 var(--tabs-boxed-link-radius) var(--tabs-boxed-link-radius) 0;
                             border-right-color: transparent !important;
                             border-bottom-color: transparent !important;
                             border-left-color: var(--tabs-border-bottom-color) !important;
+                            border-radius: 0 var(--tabs-boxed-link-radius) var(--tabs-boxed-link-radius) 0;
                         }
 
                         &.is-active {
@@ -209,6 +225,7 @@ $-css-vars-map: (
             }
         }
     }
+
     &.is-multiline {
         > .tabs {
             ul {
