--- a/packages/buefy/scss/components/tooltip.scss
+++ b/packages/buefy/scss/components/tooltip.scss
@@ -1,5 +1,4 @@
 @use "sass:list";
-
 @use "../../../bulma/sass/utilities" as bulma-utilities;
 @use "../../../bulma/sass/form/shared" as bulma-form;
 
@@ -10,7 +9,6 @@ $tooltip-multiline-sizes: (
     medium: 240px,
     large: 300px
 ) !default;
-
 $tooltip-colors: bulma-form.$form-colors !default;
 
 // Map Local variables
@@ -40,69 +38,46 @@ $-css-vars-map: (
         .tooltip-content {
             // TODO: move calculations calc(100... to CSS Var
             --tooltip-content-spacing: calc(100% + var(--tooltip-arrow-size) + var(--tooltip-arrow-margin));
+
             @if  $direction == "is-top" {
-                top: auto;
-                right: auto;
-                bottom: var(--tooltip-content-spacing);
-                left: 50%;
+                inset: auto auto var(--tooltip-content-spacing) 50%;
                 transform: translateX(-50%);
 
                 &::before {
-                    top: 100%;
-                    right: auto;
-                    bottom: auto;
-                    left: 50%;
+                    inset: 100% auto auto 50%;
                     border-top: var(--tooltip-arrow-size) solid var(--primary);
                     border-right: var(--tooltip-arrow-size) solid transparent;
                     border-left: var(--tooltip-arrow-size) solid transparent;
                     transform: translateX(-50%);
                 }
             } @else if $direction == "is-bottom" {
-                top: var(--tooltip-content-spacing);
-                right: auto;
-                bottom: auto;
-                left: 50%;
+                inset: var(--tooltip-content-spacing) auto auto 50%;
                 transform: translateX(-50%);
 
                 &::before {
-                    top: auto;
-                    right: auto;
-                    bottom: 100%;
-                    left: 50%;
+                    inset: auto auto 100% 50%;
                     border-right: var(--tooltip-arrow-size) solid transparent;
                     border-bottom: var(--tooltip-arrow-size) solid var(--primary);
                     border-left: var(--tooltip-arrow-size) solid transparent;
                     transform: translateX(-50%);
                 }
             } @else if $direction == "is-right" {
-                top: 50%;
-                right: auto;
-                bottom: auto;
-                left: var(--tooltip-content-spacing);
+                inset: 50% auto auto var(--tooltip-content-spacing);
                 transform: translateY(-50%);
 
                 &::before {
-                    top: 50%;
-                    right: 100%;
-                    bottom: auto;
-                    left: auto;
+                    inset: 50% 100% auto auto;
                     border-top: var(--tooltip-arrow-size) solid transparent;
                     border-right: var(--tooltip-arrow-size) solid var(--primary);
                     border-bottom: var(--tooltip-arrow-size) solid transparent;
                     transform: translateY(-50%);
                 }
             } @else if $direction == "is-left" {
-                top: 50%;
-                right: var(--tooltip-content-spacing);
-                bottom: auto;
-                left: auto;
+                inset: 50% var(--tooltip-content-spacing) auto auto;
                 transform: translateY(-50%);
 
                 &::before {
-                    top: 50%;
-                    right: auto;
-                    bottom: auto;
-                    left: 100%;
+                    inset: 50% auto auto 100%;
                     border-top: var(--tooltip-arrow-size) solid transparent;
                     border-bottom: var(--tooltip-arrow-size) solid transparent;
                     border-left: var(--tooltip-arrow-size) solid var(--primary);
@@ -110,15 +85,18 @@ $-css-vars-map: (
                 }
             }
         }
+
         @each $name, $pair in $tooltip-colors {
             $color: list.nth($pair, 1);
             &.is-#{$name} {
                 .tooltip-content::before {
                     @include tooltip-arrow-color($direction, var(--#{$name}))
                 }
+
                 // If light and dark colors are provided
                 @if list.length($pair) >= 4 {
                     $color-light: list.nth($pair, 3);
+
                     &.is-light {
                         .tooltip-content::before {
                             @include tooltip-arrow-color($direction, var(--#{$name}-light))
@@ -136,64 +114,73 @@ $-css-vars-map: (
     @include tooltip("is-right");
     @include tooltip("is-bottom");
     @include tooltip("is-left");
+
     position: relative;
     display: inline-flex;
+
     .tooltip-content {
         position: absolute;
         z-index: 38;
         width: auto;
         padding: 0.35rem 0.75rem;
-        border-radius: var(--radius-large);
-        box-shadow: 0 1px 2px 1px rgba(var(--scheme-invert-rgb), 0.2);
         font-size: 0.85rem;
         font-weight: var(--weight-normal);
         white-space: nowrap;
+        border-radius: var(--radius-large);
+        box-shadow: 0 1px 2px 1px rgb(var(--scheme-invert-rgb) 0.2);
 
         &::before {
             position: absolute;
             z-index: 38;
-            content: "";
             pointer-events: none;
+            content: "";
         }
     }
+
     .tooltip-trigger {
         width: 100%;
     }
+
     // Modifiers
     @each $name, $pair in $tooltip-colors {
         $color: list.nth($pair, 1);
         $color-invert: list.nth($pair, 2);
         &.is-#{$name} {
             .tooltip-content {
-                background: var(--#{$name});
-                color: var(--#{$name}-invert)
+                color: var(--#{$name}-invert);
+                background: var(--#{$name})
             }
+
             // If light and dark colors are provided
             @if list.length($pair) >= 4 {
                 $color-light: list.nth($pair, 3);
                 $color-dark: list.nth($pair, 4);
+
                 &.is-light {
                     .tooltip-content {
-                        background: var(--#{$name}-light);
                         color: var(--#{$name}-dark);
+                        background: var(--#{$name}-light);
                     }
                 }
             }
         }
     }
+
     &.is-always {
         .tooltip-content::before,
         .tooltip-content {
-            opacity: 1;
             visibility: visible;
+            opacity: 1;
         }
     }
+
     &.is-multiline {
         .tooltip-content {
             display: flex-block;
             text-align: center;
             white-space: normal;
         }
+
         @each $name, $size in $tooltip-multiline-sizes {
             &.is-#{$name} {
                 .tooltip-content {
@@ -202,12 +189,14 @@ $-css-vars-map: (
             }
         }
     }
+
     &.is-dashed {
         .tooltip-trigger {
-            border-bottom: 1px dashed var(--grey-light);
             cursor: default;
+            border-bottom: 1px dashed var(--grey-light);
         }
     }
+
     &.is-square {
         .tooltip-content {
             border-radius: 0;
